--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,9 @@
 }
 
 .job-header .company-logo{
-    width: 100px;
-    height: 100px;
-    border-radius: 6px;
+    width: 80px;
+    height: 80px;
+    border-radius: 100px;
 }
 
 .job-header .job-title{
@@ -20,23 +20,19 @@
 }
 
 .job-header .job-date{
-    font-size: 14px;
+    font-size: 12px;
     color: rgba(0, 0, 0, 0.6);
 }
 
 .job-detail{
-    padding-top: 20px;
-    padding-bottom: 20px;    
-    margin-top: 40px;
-    margin-bottom: 40px;
+    padding-top: 30px;
+    padding-bottom: 30px;    
 	text-align: left;
-    border-top: 1px solid rgba(199, 199, 199, 0.3);
-    border-bottom: 1px solid rgba(199, 199, 199, 0.3);
 }
 
 .info-box{
-    margin-left: auto;
-    margin-right: auto;
+    padding-left: auto;
+    padding-right: auto;
 }
 
 .info-box .at-icon-box-icon{
@@ -66,6 +62,7 @@ background-color: #fff4ee;
     font-size: 15px;
     line-height: 1.5;
     color: rgb(0, 0, 0);
+    margin-bottom: 0px
 }
 
 
