--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,8 +48,15 @@ background-color: #fff4ee;
     align-items: center;
     justify-content: center;
     border-radius: 4px;
+}
+
+.info-box .at-icon-box-icon svg,
+.info-box .at-icon-box-icon i{
+    width: 20px;
+    height: 20px;    
     font-size: 20px;
     color: #AC6C47;
+    fill: #AC6C47;
 }
 
 .info-box .at-icon-text{
